welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:7: error: ';' expected but 'else' found.
  else {
  ^Program:14: error: Unmatched closing brace '}' ignored here
}
^