welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas : Int, versLAvant : Boolean) : Int = {
  if (versLAvant == true) {
      avance(nbPas)
    }  
  }
  else {
    for (cpt1 <- 1 to nbPas) {
    	recule(nbPas)
  	}
	}
}